--- a/GeneralParamList/GlobalParameter.gparamlist.yml
+++ b/GeneralParamList/GlobalParameter.gparamlist.yml
@@ -23,7 +23,8 @@ param_root: !list
       ForceNoticeEnemyDist: 50.0
       WeaponRickeyLife: 3
       WeaponDropRotSpd: 60.0
-      ShieldRideBaseFrame: 120
+      #It's still 4 secons on Switch 2(60FPS, ver.1.8.2)
+      ShieldRideBaseFrame: 240
       ShieldRideHitBaseDamage: 1
       ShieldDamageratio: 0.2
       ShieldSurfMasterFrictionRatio: 0.2
